[#73] - refactor: collector -> toList() 사용